--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -8,7 +8,19 @@
 			"version": "1.0.0"
 		},
 		"title": "{{appTitle}}",
-		"description": "{{appDescription}}"
+		"description": "{{appDescription}}",
+
+		"dataSources": {
+			"remoteData": {
+				"uri": "/destinations/northwind/V3/Northwind/Northwind.svc/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+
+			}
+
+		}
 
 	},
 
@@ -56,15 +68,45 @@
 				}
 			},
 			"invoices": {
-				"type": "sap.ui.model.json.JSONModel",
-				"uri": "invoice.json"
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"dataSource": "remoteData"
 			}
-
 		},
 		"resources": {
 			"css": [{
 				"uri": "css/style.css"
 			}]
+		},
+		"routing": {
+			"config": {
+				"routerClass": "sap.m.routing.Router",
+				"viewType": "XML",
+				"viewPath": "logaligroup.SAPUI5.view",
+				"controlId": "app",
+				"controlAggregation": "pages",
+				"async": true
+
+			},
+			"routes": [{
+				"pattern": "",
+				"name": "overview",
+				"target": "overview"
+			}, {
+				"pattern": "detail/{invoicePath}",
+				"name": "detail",
+				"target": "detail"
+			}],
+			"targets": {	
+				"overview": {
+					"viewId": "overview",
+					"viewName": "Overview"
+				},
+				"detail": {
+					"viewId": "detail",
+					"viewName": "Detail"
+
+				}
+			}
 		}
 	}
 }
